--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@
                 <h1 class="text-center">Hard Rock Lyric Search</h1>
                 <div class="search-box my-5">
                     <input id="search-field" type="text" class="form-control" placeholder="Enter your artist song name">
-                    <button onclick="searchSong()" class="btn btn-success search-btn">Search</button>
+                    <button id="search-button" onclick="searchSong()" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
+            <!-- spinner  -->
+            <div class="d-flex justify-content-center ">
+                <div id="loading-spinner" class="spinner-border text-warning d-none" role="status">
+                    <span class="visually-hidden"></span>
+                </div>
+            </div>
+
             <!-- Single Lyrics -->
             <div id="song-lyrics" class="single-lyrics text-center">
                 
